  * New upstream release 390 series.
    - Fixed a driver installation failure on Linux kernel 5.17 release
      candidates, where the NVIDIA kernel module failed to build with error
      "implicit declaration of function 'PDE'".

  [ Andreas Beckmann ]
  * Refresh patches.
  * Update nv-readme.ids.
  * Update symbols files.
  * libcuda1: Add Provides: libcuda-11.6-1{,-i386}.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 04 Feb 2022 03:13:58 +0100

nvidia-graphics-drivers (495.46-1) experimental; urgency=medium

  * New upstream new feature branch release 495.46 (2021-12-13).

 -- Andreas Beckmann <anbe@debian.org>  Wed, 05 Jan 2022 22:50:22 +0100

nvidia-graphics-drivers (495.44-1) experimental; urgency=medium

  * New upstream new feature branch release 495.44 (2021-10-26).
    - Fixed a bug in the Vulkan driver where unused input attributes to a vertex
      shader would corrupt the interpolation qualifiers for the shader.
    - Fixed a bug in the Vulkan driver where individual components of
      barycentric inputs could not be read.
    - Added support for the VK_KHR_present_id extension.
    - Added support for the VK_KHR_present_wait extension.
    - Added support for the VK_KHR_shader_subgroup_uniform_control_flow
      extension.
    - Fixed a bug where VK_NVX_binary_import was advertised as supported on
      unsupported platforms. This caused calls to vkCreateDevice to fail if
      applications attempted to enable VK_NVX_binary_import on such platforms.
  * New upstream beta 495.29.05 (2021-10-14).
    - Added support for the GBM API. This adds the new symlink
      nvidia-drm_gbm.so pointing to the file libnvidia-allocator.so.VERSION to
      implement a GBM backend driver usable with the GBM loader from the Mesa
      project version 21.2 and above, as well as the files
      libnvidia-egl-gbm.so.1.1.0 and 15_nvidia_gbm.json, which implement EGL
      support for the GBM platform (EGL_KHR_platform_gbm).