@@ -108,6 +108,11 @@ then
 	VERSIONS[471]=470.57.02
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-tesla-510.ids 2>/dev/null
+then
+	VERSIONS[511]=510.47.03
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
 then
 	# 999 means current
@@ -296,6 +301,9 @@ fi
 			echo "Your card is only supported on the amd64 platform."
 			echo "Your card is only supported up to the 390 legacy drivers series."
 			PACKAGE="nvidia-legacy-390xx-driver:amd64"
+		elif [[ -n ${VERSIONS[511]} ]]; then
+			echo "Your card is supported by the Tesla 510 drivers series."
+			PACKAGE="nvidia-tesla-510-driver"
 		elif [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is supported by the Tesla 470 drivers series."
 			PACKAGE="nvidia-tesla-470-driver"
@@ -320,6 +328,9 @@ fi
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
 		else
 			echo "Oops. Internal error 12 ($NVGA)"
+		fi
+		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-510-driver" ] && [[ -n ${VERSIONS[511]} ]]; then
+			echo "Your card is also supported by the Tesla 510 drivers series."
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-470-driver" ] && [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is also supported by the Tesla 470 drivers series."
