@@ -8,4 +8,5 @@ debian/detect/nvidia-tesla-450.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
 debian/detect/nvidia-tesla-460.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
 debian/detect/nvidia-470.ids			usr/share/nvidia/	[amd64 arm64]
 debian/detect/nvidia-tesla-470.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
+debian/detect/nvidia-tesla-510.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
 nvidia.ids					usr/share/nvidia/	[!ppc64el]
