@@ -69,6 +69,7 @@ nvidia-graphics-drivers (510.47.03-1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update symbols files.
   * libcuda1: Add Provides: libcuda-11.6-1{,-i386}.
+  * nvidia-detect: Add support for Tesla 510 drivers.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 04 Feb 2022 03:13:58 +0100
 
